# rules_minidock

./: .bazelrc  .gitignore  .mailmap  BUILD_TAR_METRICS.md  MODULE.bazel  README.md  WORKSPACE  bazel  test_metrics.sh
.github/workflows/: ci.yml
minidock/: BUILD.bazel  app_launch_template.txt  container_assemble.bzl  container_binary.bzl  container_compose.bzl  container_config.bzl  container_data.bzl  container_push.bzl  external_container_repo.bzl  providers.bzl
minidock/container_data_tools/: BUILD  build_tar.py
minidock/internal/: README.md  external_metadata.bzl
minidock/remote_tools/: BUILD  extensions.bzl  load_tool.bzl  multitool.lock.json  repo_rule_load_tool.bzl  repositories.bzl  update_multitool_remote_tools.sh  update_remote_tools.sh  wrap_executable.bzl
scripts/: ci-test.sh  ci_test.py
tests/: test_build_tar_performance.py  test_compression_performance.py  test_hybrid_compression.py
tests/override_tools/: BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE
tests/override_tools/merger/: BUILD.bazel
tests/override_tools/pusher/: BUILD  BUILD.bazel
tests/simple_flow/: BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  file_a.txt  file_b.txt  requirements_lock_3_10.txt
