"""Bazel module for rules_minidock - Minimal Docker/OCI container image rules."""

module(
    name = "rules_minidock",
    version = "0.1.0",
    compatibility_level = 1,
)

# Required dependencies
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//minidock/remote_tools:multitool.lock.json")
use_repo(multitool, "multitool")

# Test dependencies
bazel_dep(name = "rules_python", version = "0.40.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.10")
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//tests/simple_flow:requirements_lock_3_10.txt",
)
use_repo(pip, "pip")

# Test container repositories
external_containers = use_extension("//minidock:external_container_repo.bzl", "external_container_repo", dev_dependency = True)
external_containers.container(
    name = "bazel_320",
    digest = "sha256:08434856d8196632b936dd082b8e03bae0b41346299aedf60a0d481ab427a69f",
    registry = "gcr.io",
    repository = "bazel-public/bazel",
)
use_repo(external_containers, "bazel_320")
