"""Test module for override_tools."""

module(name = "override_tools_test")

# Use the local rules_minidock
local_path_override(
    module_name = "rules_minidock",
    path = "../..",
)

bazel_dep(name = "rules_minidock")

# Note: This test doesn't use the extension as it tests custom tool overrides
