"""Test module for simple_flow."""

module(name = "simple_flow_test")

# Use the local rules_minidock
local_path_override(
    module_name = "rules_minidock",
    path = "../..",
)

bazel_dep(name = "rules_minidock")

# Load the minidock tools
minidock_tools = use_extension("@rules_minidock//minidock/remote_tools:extensions.bzl", "minidock_tools")
use_repo(
    minidock_tools,
    "rules_minidock__merge_app_linux_x86_64",
    "rules_minidock__merge_app_macos_aarch64",
    "rules_minidock__merge_app_macos_x86_64",
    "rules_minidock__puller_app",
    "rules_minidock__pusher_app_linux_x86_64",
    "rules_minidock__pusher_app_macos_aarch64",
    "rules_minidock__pusher_app_macos_x86_64",
)

# Python dependencies for the test
bazel_dep(name = "rules_python", version = "0.24.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")
